--- a/assets/mq-invoke/mq-invoke-policy.cfg
+++ b/assets/mq-invoke/mq-invoke-policy.cfg
@@ -55,3 +55,7 @@ assembly-function "mq-invoke_1.0.0"
  exit
  assembly mq-invoke_1.0.0
 exit
+
+apic-gw-service
+  user-defined-policies mq-invoke_1.0.0
+exit
